Fix layout problems (#29)
* Fix layout problems

* Fix yaml view

--- a/scss/policies-view.scss
+++ b/scss/policies-view.scss
@@ -11,8 +11,21 @@
 
 
 .policies-view {
+  .bx--select--inline{
+    svg.bx--select__arrow{
+      position: absolute
+    }
+  }
 
+  .overview-content{
+    .bx--module__inner{
+      overflow: hidden
+    }
+  }
 
+  .yaml-editor-button{
+    top: -0.3rem
+  }
 }
 
 .bx--search-input {
